[package]
name = "fondbot"
version = "0.1.0"
authors = ["Shou Ya <github@lain.li>"]


[dependencies]
serde = "*"
chrono = { version = "0.4", features = ["serde"] }
serde_derive = "*"
serde_json = "*"
erased-serde = "0.1.3"
log = "*"
dotenv = "*"
env_logger = "*"
hyper = "0.11"
hyper-tls = "0.1.2"
error-chain = "*"
regex = "*"
lazy_static = "*"
slog = { version = "2.1.1", features = ["max_level_trace"] }
slog-scope = "4.0.1"
slog-async = "2.2.0"
slog-term = "2.3.0"
diesel = { version = "0.15.0", features = ["sqlite", "chrono"] }
diesel_codegen = { version = "0.16.0", features = ["sqlite"] }
tokio-core = "*"
tokio-timer = "*"
futures = "*"
url = "1.7.0"
curl = "*"
futures-await = "0.1"


[dependencies.clippy]
optional = true
version = "*"

[features]
lint = ["clippy"]

[dependencies.telegram-bot]
git = "https://github.com/shouya/telegram-bot-rust"
rev = "f7e988c95"

# path = "../telegram-bot-rust/lib"

