[package]
name = "fondbot"
version = "0.1.0"
authors = ["Shou Ya <github@lain.li>"]


[dependencies]
serde = { version = "~1.0.90", features = ["derive"] }
chrono = { version = "~0.4.6", features = ["serde"] }
serde_json = "~1.0.9"
log = "~0.4.6"
dotenv = "~0.10.1"
env_logger = "~0.6.1"
hyper = "0.11"
hyper-tls = "0.1.2"
failure = "*"
failure_derive = "*"
regex = "*"
lazy_static = "*"
slog = { version = "2.1.1", features = ["max_level_trace"] }
slog-scope = "4.0.1"
slog-async = "2.2.0"
slog-term = "2.3.0"
diesel = { version = "0.16.0", features = ["sqlite", "chrono"] }
diesel_codegen = { version = "0.16.0", features = ["sqlite"] }
tokio-core = "*"
tokio-timer = "*"
# can't use futures 2
futures = "0.1.21"
url = "1.7.0"
curl = "*"


[dependencies.clippy]
optional = true
version = "*"

[features]
lint = ["clippy"]

[dependencies.telegram-bot]
git = "https://github.com/shouya/telegram-bot-rust"
rev = "f7e988c95"

# path = "../telegram-bot-rust/lib"

