[package]
name = "fondbot"
version = "0.1.0"
authors = ["Shou Ya <github@lain.li>"]


[dependencies]
serde = { version = "~1.0.91", features = ["derive"] }
chrono = { version = "~0.4.6", features = ["serde"] }
serde_json = "~1.0.9"
log = "~0.4.6"
dotenv = "~0.10.1"
env_logger = "~0.6.1"
hyper = "~0.12.25"
hyper-rustls = "~0.16.1"
failure = "~0.1.5"
failure_derive = "~0.1.5"
regex = "~1.1.5"
lazy_static = "~1.3.0"
slog = { version = "~2.4.1", features = ["max_level_trace"] }
slog-scope = "~4.1.1"
slog-async = "~2.3.0"
slog-term = "~2.4.0"
diesel = { version = "0.16.0", features = ["sqlite", "chrono"] }
diesel_codegen = { version = "0.16.0", features = ["sqlite"] }
tokio-core = "~0.1.17"
tokio-timer = "~0.2.10"
# can't use futures 2
futures = "~0.1.26"
url = "~1.7.2"
curl = "~0.4.20"
clippy = { version = "*", optional = true }


[features]
lint = ["clippy"]

[dependencies.telegram-bot]
git = "https://github.com/shouya/telegram-bot-rust"
rev = "f7e988c95"

# path = "../telegram-bot-rust/lib"

